DZ10/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dz2-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/romanov($|/)(orders)
            pathType: ImplementationSpecific
            backend:
              service:
                name: rvm-dz10-orders-service
                port:
                  number: 8080

          - path: /otusapp/romanov($|/)(deliveries)
            pathType: ImplementationSpecific
            backend:
              service:
                name: rvm-dz10-delivery-service
                port:
                  number: 8080
          - path: /otusapp/romanov($|/)(stores)
            pathType: ImplementationSpecific
            backend:
              service:
                name: rvm-dz10-store-service
                port:
                  number: 8080

          - path: /otusapp/romanov($|/)(payments)
            pathType: ImplementationSpecific
            backend:
              service:
                name: rvm-dz10-payments-service
                port:
                  number: 8080
          #
          # - path: /otusapp/romanov($|/)(notification)
          #   pathType: ImplementationSpecific
          #   backend:
          #     service:
          #       name: rvm-dz6-notifications-service
          #       port:
          #         number: 8080
